--- a/analysis_assistant_system/app/src/main/res/layout/fragment_list_item_edit1.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_list_item_edit1.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -9,11 +9,12 @@
 
         <EditText
             android:id="@+id/edit_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/qmui_divider_bottom_bitmap"
+            android:inputType="text"
             android:padding="5dp"
             android:textColor="?attr/qmui_config_color_gray_5"
             android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
 
-</merge>
+</LinearLayout>
