--- a/analysis_assistant_system/app/src/main/res/values/dimens.xml
+++ b/analysis_assistant_system/app/src/main/res/values/dimens.xml
@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
- Tencent is pleased to support the open source community by making QMUI_Android available.
-
- Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.
-
- Licensed under the MIT License (the "License"); you may not use this file except in
- compliance with the License. You may obtain a copy of the License at
-
- http://opensource.org/licenses/MIT
-
- Unless required by applicable law or agreed to in writing, software distributed under the License is
- distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
- either express or implied. See the License for the specific language governing permissions and
- limitations under the License.
--->
 
 <resources>
     <dimen name="home_tab_height">49dp</dimen>
@@ -41,4 +26,8 @@
     <!-- Span Utils 各种 Span 工具 -->
     <dimen name="spanUtils_column_marginBottom">35dp</dimen>
     <dimen name="spanUtils_common_textSize">16sp</dimen>
+
+    <!-- search -->
+    <dimen name="search_view_inset">5dp</dimen>
+    <dimen name="sliding_search_view_header_height">250dp</dimen>
 </resources>
