--- a/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
@@ -20,7 +20,7 @@
             app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
-            app:floatingSearch_searchHint="Search..."
+            app:floatingSearch_searchHint="请输入器材编码"
             app:floatingSearch_showSearchKey="false"
             app:floatingSearch_menu="@menu/menu_search_view"
             app:floatingSearch_suggestionsListAnimDuration="250" />
@@ -28,14 +28,12 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:background="@color/qmui_config_color_background">
 
-            <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
-                android:id="@+id/groupListView"
+            <RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
 
         </ScrollView>
 
