--- a/analysis_assistant_system/app/src/main/res/menu/menu_search_view.xml
+++ b/analysis_assistant_system/app/src/main/res/menu/menu_search_view.xml
@@ -1,19 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_voice_rec"
-        android:title="语音"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_scan"
+        android:title="扫一扫"
         android:orderInCategory="1"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_mic_black_24dp"/>
-    <item android:id="@+id/action_taxi"
-        android:title="more"
+    <item android:id="@+id/action_nfc"
+        android:title="NFC"
         android:orderInCategory="2"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_more_vert_black_24dp"/>
-    <item android:id="@+id/action_change_colors"
-        android:title="颜色"
-        android:orderInCategory="3"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_invert_colors_black_24dp"/>
 </menu>
