--- a/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:background="@color/qmui_config_color_background">
 
-            <RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
