--- a/analysis_assistant_system/app/src/main/res/layout/fragment_equip_detail.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_equip_detail.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent">
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,10 +12,42 @@
         android:background="@color/qmui_config_color_background"
         android:fitsSystemWindows="true">
 
-        <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
-            android:id="@+id/groupListView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
+                android:id="@+id/groupListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListSectionHeaderFooterView
+                android:id="@+id/equip_history_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.qmuiteam.qmui.widget.grouplist.QMUIGroupListSectionHeaderFooterView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <com.qmuiteam.qmui.widget.QMUIEmptyView
+                    android:id="@+id/emptyView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+                <com.baoyachi.stepview.VerticalStepView
+                    android:id="@+id/equip_history"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </ScrollView>
 
