--- a/analysis_assistant_system/app/src/main/res/layout/fragment_list_item_edit.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_list_item_edit.xml
@@ -2,36 +2,28 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-        <!--验证码输入框-->
+
         <EditText
-            android:id="@+id/edittext_verifycode"
+            android:id="@+id/item_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:maxWidth="220dp"
             android:background="@drawable/qmui_divider_bottom_bitmap"
-            android:hint="4位数字验证码"
-            android:inputType="number"
-            android:maxLength="4"
+            android:inputType="text"
             android:padding="5dp"
             android:textColor="?attr/qmui_config_color_gray_5"
             android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
 
-        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-            android:id="@+id/button_getverifycode"
+        <ImageView
+            android:id="@+id/item_image_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="获取验证码"
-            android:textSize="?attr/qmui_common_list_item_title_h_text_size"
-            app:qmui_radius="4dp" />
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp"
+            android:src="@drawable/ic_mic_black_24dp"/>
 
 </LinearLayout>
