--- a/analysis_assistant_system/app/src/main/res/menu/menu_search_view.xml
+++ b/analysis_assistant_system/app/src/main/res/menu/menu_search_view.xml
@@ -4,10 +4,10 @@
         android:title="扫一扫"
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_mic_black_24dp"/>
+        android:icon="@drawable/ic_scan_24dp"/>
     <item android:id="@+id/action_nfc"
         android:title="NFC"
         android:orderInCategory="2"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_more_vert_black_24dp"/>
+        android:icon="@drawable/ic_nfc_24dp"/>
 </menu>
