--- a/analysis_assistant_system/app/src/main/res/values/dimens.xml
+++ b/analysis_assistant_system/app/src/main/res/values/dimens.xml
@@ -30,4 +30,8 @@
     <!-- search -->
     <dimen name="search_view_inset">5dp</dimen>
     <dimen name="sliding_search_view_header_height">250dp</dimen>
+
+    <!-- gesture -->
+    <dimen name="small_grid_width">60dp</dimen>
+    <dimen name="big_grid_width">270dp</dimen>
 </resources>
