--- a/analysis_assistant_system/app/src/main/res/values/colors.xml
+++ b/analysis_assistant_system/app/src/main/res/values/colors.xml
@@ -37,4 +37,15 @@
     <color name="colorHelper_square_alpha_background">@color/app_color_theme_4</color>
     <color name="colorHelper_square_from_ratio_background">@color/app_color_blue</color>
     <color name="colorHelper_square_to_ratio_background">@color/app_color_theme_3</color>
+
+    <!-- gesture -->
+    <color name="colorNotChecked">#EBEBEB</color>
+    <color name="colorChecked">#F8A916</color>
+    <color name="colorCheckedErr">#FF3232</color>
+
+    <color name="colorRoundBorder">#FEEDD0</color>
+    <color name="colorRoundBorderErr">#FFE1E1</color>
+    <color name="color_v">#999999</color>
+
+
 </resources>
