--- a/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_equip_list.xml
@@ -25,17 +25,25 @@
             app:floatingSearch_menu="@menu/menu_search_view"
             app:floatingSearch_suggestionsListAnimDuration="250" />
 
-        <ScrollView
+        <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
+            android:id="@+id/pull_to_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/qmui_config_color_background">
+            android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:background="@color/qmui_config_color_background">
 
-        </ScrollView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/qmui_config_color_white"/>
+
+            </ScrollView>
+
+        </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>
 
     </LinearLayout>
 
