--- a/analysis_assistant_system/app/src/main/res/layout/activity_login.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:hint="用户名"
                     android:textColor="#333"
+                    android:singleLine="true"
                     android:textSize="15sp" />
 
             </com.github.florent37.materialtextfield.MaterialTextField>
@@ -61,6 +62,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="密码"
+                    android:singleLine="true"
+                    android:inputType="textPassword"
                     android:textColor="#333"
                     android:textSize="15sp" />
 
