--- a/analysis_assistant_system/app/src/main/res/layout/fragment_home.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_home.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="?attr/qmui_topbar_height"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
+
         <com.arlib.floatingsearchview.FloatingSearchView
             android:id="@+id/floating_search_view"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="match_parent"
             app:floatingSearch_close_search_on_keyboard_dismiss="true"
             app:floatingSearch_leftActionMode="showSearch"
             app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
@@ -28,7 +29,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:layout_marginTop="70dp"
             android:background="@color/qmui_config_color_background">
 
             <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
@@ -39,7 +40,7 @@
 
         </ScrollView>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
         android:id="@+id/topbar"
