--- a/analysis_assistant_system/app/src/main/res/layout/fragment_list_foot.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_list_foot.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="15dp"
-            android:text="我是有底线的"
+            android:text="哎呦，到底了"
             android:textColor="#4DB6AC"
             android:textSize="16sp" />
 
