--- a/analysis_assistant_system/app/src/main/res/layout/layout_gesture_pwd_check.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/layout_gesture_pwd_check.xml
@@ -32,6 +32,7 @@
         app:ifChildHasBorder="true" />
 
     <TextView
+        android:id="@+id/go_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
