--- a/analysis_assistant_system/app/src/main/res/layout/layout_map.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/layout_map.xml
@@ -10,6 +10,11 @@
         android:layout_height="match_parent" >
     </com.esri.arcgisruntime.mapping.view.MapView>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"/>
+
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
         android:id="@+id/topbar"
         android:layout_width="match_parent"
