--- a/analysis_assistant_system/app/src/main/res/layout/dialog_select_item.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/dialog_select_item.xml
@@ -5,8 +5,8 @@
                 android:background="#ffffff"
                 android:orientation="horizontal"
                 android:paddingBottom="15dp"
-                android:paddingLeft="10dp"
-                android:paddingStart="10dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
                 android:paddingTop="15dp">
 
     <TextView
@@ -16,6 +16,7 @@
         android:layout_centerInParent="true"
         android:gravity="center_vertical"
         android:lines="1"
-        android:textSize="20sp"/>
+        android:textColor="#212832"
+        android:textSize="15sp"/>
 
 </RelativeLayout>
