--- a/analysis_assistant_system/app/src/main/res/drawable/textarea_bg.xml
+++ b/analysis_assistant_system/app/src/main/res/drawable/textarea_bg.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1px"
-        android:color="#A0A0A0"/>
+        android:color="#FFFFFF"/>
 
     <padding
         android:bottom="10dp"
