--- a/analysis_assistant_system/app/src/main/res/layout/fragment_msg_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_msg_add.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:id="@+id/describe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="true"
