--- a/analysis_assistant_system/app/src/main/res/layout/fragment_aid_list.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_aid_list.xml
@@ -35,7 +35,7 @@
             app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
-            app:floatingSearch_searchHint="请输入航标编码"
+            app:floatingSearch_searchHint="请输入航标名称"
             app:floatingSearch_showSearchKey="false"
             app:floatingSearch_suggestionsListAnimDuration="250" />
 
