--- a/analysis_assistant_system/app/src/main/res/layout/layout_home.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/layout_home.xml
@@ -38,7 +38,7 @@
                 
             </LinearLayout>
 
-            <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
+            <!-- <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
                 android:id="@+id/msg_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/qmui_config_color_background"/>
-            </RelativeLayout>
+            </RelativeLayout> -->
 
         </LinearLayout>
 
