--- a/analysis_assistant_system/app/src/main/res/layout/dialog_select_item.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/dialog_select_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:background="#ffffff"
                 android:orientation="horizontal"
                 android:paddingBottom="15dp"
@@ -9,7 +10,7 @@
                 android:paddingRight="24dp"
                 android:paddingTop="15dp">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/select_item_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +18,29 @@
         android:gravity="center_vertical"
         android:lines="1"
         android:textColor="#212832"
-        android:textSize="15sp"/>
+        android:textSize="15sp"/>-->
+    <TextView
+        android:id="@+id/select_item_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:gravity="left|center_vertical"
+        android:textColor="#212832"
+        android:textSize="15sp" />
 
-</RelativeLayout>
+    <Space
+        android:id="@+id/select_item_space"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginRight="14dp"/>
+
+    <TextView
+        android:id="@+id/select_item_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#8492a6"
+        android:textSize="15sp"
+        android:visibility="visible" />
+
+</LinearLayout>
