--- a/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
@@ -11,29 +11,29 @@
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
+            <EditText
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:singleLine="false" />
+                android:layout_height="match_parent"
+                android:singleLine="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
         </ScrollView>
 
-        <TextView
-            android:id="@+id/text_date"
+        <View
+            android:id="@+id/anchor_bottom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="" />
-
+            android:layout_height="0dp" />
 
     </LinearLayout>
+
+
 
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
         android:id="@+id/topbar"
