--- a/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
@@ -15,6 +15,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
             android:layout_weight="1">
 
             <EditText
@@ -23,6 +25,7 @@
                 android:layout_height="match_parent"
                 android:singleLine="false"
                 android:focusable="true"
+                android:background="@null"
                 android:focusableInTouchMode="true"/>
         </ScrollView>
 
