--- a/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
@@ -17,6 +17,8 @@
             android:layout_height="0dp"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:layout_weight="1">
 
             <EditText
@@ -26,8 +28,24 @@
                 android:singleLine="false"
                 android:focusable="true"
                 android:background="@null"
-                android:focusableInTouchMode="true"/>
+                android:focusableInTouchMode="true"
+                android:textColor="?attr/qmui_config_color_gray_5"
+                android:textSize="?attr/qmui_common_list_item_detail_h_text_size"/>
         </ScrollView>
+
+        <TextView
+            android:id="@+id/text_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+        </LinearLayout>
 
         <View
             android:id="@+id/anchor_bottom"
