--- a/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
@@ -2,34 +2,35 @@
 <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/qmui_topbar_height"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:fitsSystemWindows="true">
 
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:paddingRight="20dp"
+            android:layout_weight="1"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
-            android:layout_weight="1">
+            android:paddingRight="20dp">
 
             <EditText
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:singleLine="false"
-                android:focusable="true"
+                android:layout_height="wrap_content"
                 android:background="@null"
+                android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:singleLine="false"
                 android:textColor="?attr/qmui_config_color_gray_5"
-                android:textSize="?attr/qmui_common_list_item_detail_h_text_size"/>
+                android:textSize="?attr/qmui_common_list_item_detail_h_text_size" />
         </ScrollView>
 
         <LinearLayout
@@ -44,7 +45,6 @@
             android:layout_height="0dp" />
 
     </LinearLayout>
-
 
 
     <com.qmuiteam.qmui.widget.QMUITopBarLayout
