--- a/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
+++ b/analysis_assistant_system/app/src/main/res/layout/fragment_note_add.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_img"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
         </LinearLayout>
 
         <View
